# fanout-live

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  TODO.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: entrypoint.sh  fanout-live.service  nginx.conf  remote-multistreamer.service
docs/: release.md
fanout_live/: __init__.py  cli.py  config_store.py  ffmpeg.py
fanout_live/config/: __init__.py  store.py
fanout_live/relay/: __init__.py  controller.py  ffmpeg.py
fanout_live/web/: __init__.py  server.py
fanout_live/web/static/: app.js  index.html  styles.css
remote_multistreamer/: __init__.py  cli.py  config.py  config_store.py  ffmpeg.py  web.py
remote_multistreamer/webui/: app.js  index.html  styles.css
tests/: test_config.py  test_deploy_config.py  test_ffmpeg.py  test_integration_rtmp.py  test_relay_controller.py  test_web_auth.py  test_web_static.py
